syntax = "proto3";

package aleg.laptops;

// option go_package = ".;pb";
option go_package = "github.com/aleg/go-grpc-laptops/pb";

import "memory_message.proto";

message CPU {
  string brand = 1;
  string name = 2;
  uint32 number_cores = 3; // positive integer
  uint32 number_threads = 4; // positive integer
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}
